tests/ui/basic/undefined_function.rs
use metamatch::eval;

fn main() {
    eval! {
        foo()
    };
}
